# blog_comments_api

./: .dockerignore  .env.dev  .env.dev.example  .env.prod  .env.prod.example  .gitignore  API.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt
app/api/: models.py  serializers.py  urls.py  views.py
app/api/migrations/: 0001_initial.py
app/app/: settings.py  urls.py
docker/nginx/: Dockerfile.dev  Dockerfile.prod  nginx.conf
docker/web/: Dockerfile.dev  Dockerfile.prod  entrypoint.dev.sh  entrypoint.prod.sh
